axios used for request

--- a/webapp/src/Components/Tier1Login/Tier1Login.scss
+++ b/webapp/src/Components/Tier1Login/Tier1Login.scss
@@ -10,3 +10,9 @@
 .title, .has-text-centereds{
     margin-top: 3rem;
 }   
+
+#flash-msg{
+    right: 0px !important;
+    position: relative !important;
+    display: none;
+}
