API integration minor bugs fixed

--- a/webapp/src/Components/Tier1Login/Tier1Login.scss
+++ b/webapp/src/Components/Tier1Login/Tier1Login.scss
@@ -16,3 +16,9 @@
     position: relative !important;
     display: none;
 }
+
+#flash-msg2{
+    right: 0px !important;
+    position: relative !important;
+    display: none;
+}
