decline api added and integrated

--- a/server/webapp/src/Components/Tier1Action/Tier1Action.scss
+++ b/server/webapp/src/Components/Tier1Action/Tier1Action.scss
@@ -69,8 +69,13 @@
     cursor: pointer;
 }
 
+
 .highlight{
     background-color: rgb(243, 243, 147) !important;
+}
+
+#grn{
+    display: none;
 }
 
 @media(max-width:1120px){
