--- a/server/webapp/src/Components/Tier1DataUpdate/Tier1DataUpdate.scss
+++ b/server/webapp/src/Components/Tier1DataUpdate/Tier1DataUpdate.scss
@@ -1,11 +1,11 @@
-::-webkit-scrollbar {
-    display: none;
-}
-/* Hide scrollbar for IE, Edge and Firefox */
-.table{
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
+// ::-webkit-scrollbar {
+//     display: none;
+// }
+// /* Hide scrollbar for IE, Edge and Firefox */
+// .table{
+//   -ms-overflow-style: none;  /* IE and Edge */
+//   scrollbar-width: none;  /* Firefox */
+// }
 .navbar-item img {
   max-height: 2.5rem;
 }
