--- a/server/webapp/src/Components/Tier1Action/Tier1Action.scss
+++ b/server/webapp/src/Components/Tier1Action/Tier1Action.scss
@@ -78,6 +78,10 @@
     display: none;
 }
 
+.ag-header-cell-label {
+    justify-content: center;
+ }
+
 @media(max-width:1120px){
     .tier-2-action{
         display: none;
