--- a/server/webapp/src/Components/Tier2EarlyPayment/Tier2EarlyPayment.scss
+++ b/server/webapp/src/Components/Tier2EarlyPayment/Tier2EarlyPayment.scss
@@ -45,6 +45,11 @@
     max-height: 50px !important;
 }
 
+.ag-header-cell-label {
+    justify-content: center;
+ }
+
+
 // .remark-class:hover{
 //  color: red !important;
 // }
