debit Note backend added and show/hide password

--- a/server/webapp/src/Components/Tier1Login/Tier1Login.scss
+++ b/server/webapp/src/Components/Tier1Login/Tier1Login.scss
@@ -22,3 +22,9 @@
     position: relative !important;
     display: none;
 }
+
+#eye{
+    margin-top: 9px;
+    margin-left: -32px;
+    z-index: 10;
+}
