--- a/server/webapp/src/Components/Tier1Login/Tier1Login.scss
+++ b/server/webapp/src/Components/Tier1Login/Tier1Login.scss
@@ -30,11 +30,12 @@ $background-color: #F0F0F7;
     min-height: 1000px;
     background-color:$primary-color ;
     z-index: 10;
+    display: flex;
+    align-items: center;
 }
 .login-left img{
     width: 38vw;
-    margin-left: 6vw;
-    margin-top: 5vw;
+    margin-left: 7vw;
     z-index: 20;
 }
 
